bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: ')' expected but 'else' found.
  else if (litMessage=="A"){avance()}
  ^